; ModuleID = '/home/carl/AnghaBench/libgit2/tests/ignore/extr_status.c_test_ignore_status__adding_internal_ignores.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/ignore/extr_status.c_test_ignore_status__adding_internal_ignores.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"empty_standard_repo\00", align 1
@g_repo = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [8 x i8] c"one.txt\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"two.bar\00", align 1
@.str.3 = private unnamed_addr constant [11 x i8] c"*.nomatch\0A\00", align 1
@.str.4 = private unnamed_addr constant [7 x i8] c"*.txt\0A\00", align 1
@.str.5 = private unnamed_addr constant [7 x i8] c"*.bar\0A\00", align 1
@.str.6 = private unnamed_addr constant [39 x i8] c"multiple\0A*.rules\0A# comment line\0A*.bar\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_ignore_status__adding_internal_ignores() #0 {
  %1 = call i32 @cl_git_sandbox_init(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  store i32 %1, i32* @g_repo, align 4
  %2 = call i32 @refute_is_ignored(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %3 = call i32 @refute_is_ignored(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0))
  %4 = load i32, i32* @g_repo, align 4
  %5 = call i32 @git_ignore_add_rule(i32 %4, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i64 0, i64 0))
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = call i32 @refute_is_ignored(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %8 = call i32 @refute_is_ignored(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0))
  %9 = load i32, i32* @g_repo, align 4
  %10 = call i32 @git_ignore_add_rule(i32 %9, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.4, i64 0, i64 0))
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = call i32 @assert_is_ignored(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %13 = call i32 @refute_is_ignored(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0))
  %14 = load i32, i32* @g_repo, align 4
  %15 = call i32 @git_ignore_add_rule(i32 %14, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.5, i64 0, i64 0))
  %16 = call i32 @cl_git_pass(i32 %15)
  %17 = call i32 @assert_is_ignored(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %18 = call i32 @assert_is_ignored(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0))
  %19 = load i32, i32* @g_repo, align 4
  %20 = call i32 @git_ignore_clear_internal_rules(i32 %19)
  %21 = call i32 @cl_git_pass(i32 %20)
  %22 = call i32 @refute_is_ignored(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %23 = call i32 @refute_is_ignored(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0))
  %24 = load i32, i32* @g_repo, align 4
  %25 = call i32 @git_ignore_add_rule(i32 %24, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.6, i64 0, i64 0))
  %26 = call i32 @cl_git_pass(i32 %25)
  %27 = call i32 @refute_is_ignored(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %28 = call i32 @assert_is_ignored(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0))
  ret void
}

declare dso_local i32 @cl_git_sandbox_init(i8*) #1

declare dso_local i32 @refute_is_ignored(i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_ignore_add_rule(i32, i8*) #1

declare dso_local i32 @assert_is_ignored(i8*) #1

declare dso_local i32 @git_ignore_clear_internal_rules(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
